--- a/page3.css
+++ b/page3.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   width: 100%;
   margin: auto;
@@ -23,18 +24,33 @@ p {
 }
 
 header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
   width: 100%;
   min-width: 320px;
   padding: 21px 0;
 }
-header img {
+header .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+header .logo img {
   max-width: 168px;
 }
-header i {
-  align-items: flex-start;
+
+.fa-arrow-left:before {
+  position: absolute;
+  left: 2rem;
+  height: 2rem;
+  width: 2rem;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
+  font-size: 1.2rem;
+  color: #000;
 }
 
 main img {
@@ -65,7 +81,25 @@ main img {
   font-size: 2rem;
   padding-right: 3rem;
 }
+@media (max-width: 768px) {
+  .main-container {
+    width: 100%;
+  }
+}
+.main-container .menu {
+  width: 100%;
+  max-width: 634px;
+}
+.main-container .menu h3 {
+  width: 95%;
+  max-width: 634px;
+}
+.main-container .menu .card-menu {
+  width: 95%;
+  max-width: 634px;
+}
 
+/******* Cartes des menus *******/
 .card-title {
   font-family: "Shrikhand", cursive;
   display: flex;
@@ -90,6 +124,78 @@ main img {
   background: var(--white, #FFF);
   border-radius: 20px;
 }
+.card-menucard {
+  width: 350px;
+  padding: 14px 0;
+  border-radius: 0.75rem;
+  display: flex;
+  justify-content: space-between;
+}
+.card-menucard h3 {
+  font-size: 16px;
+}
+.card-menucard h4 {
+  font-size: 16px;
+}
+@media (max-width: 768px) {
+  .card-menucard h3 {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  .card-menucard p {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+}
+.card-menu:hover .btn-card {
+  margin-right: 0px;
+  min-width: 4rem;
+  transition: margin-right 0.5s;
+}
+.card-menu:hover .card-content {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.card-menu:hover .card-content h3 {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.card-menu:hover .card-content p {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.card-menu:hover .circle {
+  transform: rotate(360deg);
+}
+
+.btn-card {
+  background-color: #99E2D0;
+  min-width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: -64px;
+}
+
+.circle {
+  width: 25px;
+  height: 25px;
+  border-radius: 100px;
+  background: #FFF;
+  display: flex;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+  transition: transform 0.5s;
+  position: relative;
+}
+.circle .fas {
+  color: #99E2D0;
+}
 
 .card-menu .card {
   padding: 10px;
@@ -98,35 +204,64 @@ main img {
   flex: 1;
   display: flex;
   justify-content: space-between;
+  border-radius: 15.043px;
+  background: var(--white, #FFF);
+  box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1);
 }
 
 .prix {
   display: flex;
   align-items: center;
+  align-self: flex-end;
 }
 
+/******* Entrées *******/
 .starter {
   display: flex;
   flex-direction: column;
-  gap: 20px;
   align-items: center;
   margin-bottom: 40px;
+  gap: 12px;
 }
 .starter h3 {
-  align-self: flex-start;
   font-weight: 300;
 }
+.starter h4 {
+  margin: 0;
+  padding-bottom: 5px;
+}
+.starter p {
+  margin: 0;
+}
+.starter .card {
+  padding: 15px;
+}
+@media (max-width: 768px) {
+  .starter {
+    width: 100%;
+  }
+}
 
+/******* Plats *******/
 .dish {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 12px;
   align-items: center;
   margin-bottom: 40px;
 }
 .dish h3 {
-  align-self: flex-start;
   font-weight: 300;
+}
+.dish h4 {
+  margin: 0;
+  padding-bottom: 5px;
+}
+.dish p {
+  margin: 0;
+}
+.dish .card {
+  padding: 15px;
 }
 
 .dish h3::after {
@@ -137,19 +272,29 @@ main img {
   background: #99E2D0;
 }
 
+/******* Désserts ******/
 .dessert {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 12px;
   align-items: center;
   margin-bottom: 70px;
 }
 .dessert h3 {
-  align-self: flex-start;
   font-weight: 300;
 }
+.dessert h4 {
+  margin: 0;
+  padding-bottom: 5px;
+}
+.dessert p {
+  margin: 0;
+}
+.dessert .card {
+  padding: 15px;
+}
 
-.dessert h3::after {
+.dessert h3:after {
   content: "";
   display: block;
   width: 43px;
@@ -157,6 +302,7 @@ main img {
   background: #99E2D0;
 }
 
+/******* Bouton commander *******/
 .btn-explore {
   margin-top: 40px;
   margin-bottom: 60px;
@@ -183,6 +329,7 @@ main img {
   box-shadow: 0 3px 10px #ff79da;
 }
 
+/******* Footer *******/
 footer {
   max-width: 1440px;
   width: 100%;
@@ -193,10 +340,11 @@ footer {
   flex-direction: row-reverse;
   margin-top: 40px;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  justify-content: flex-start;
 }
 @media (max-width: 768px) {
   footer {
-    width: 120%;
+    width: 100%;
     margin-right: 20px;
     height: 100%;
     flex-direction: column;
@@ -214,15 +362,34 @@ footer a {
   text-decoration: none;
   color: white;
 }
+footer i {
+  padding-right: 5px;
+  padding-left: 10px;
+}
+@media (max-width: 768px) {
+  footer i {
+    padding-left: 0;
+  }
+}
+footer .footer-text {
+  padding-right: 40px;
+  display: flex;
+  flex-direction: row-reverse;
+}
+@media (max-width: 768px) {
+  footer .footer-text {
+    flex-direction: column;
+  }
+}
 
 .footer-content {
   display: flex;
   flex-direction: row-reverse;
   gap: 10px;
   padding-right: 100px;
-  margin-top: 45px;
+  margin-top: 50px;
   padding: 10px 10px;
-  margin-right: 30px;
+  margin-right: 50px;
 }
 @media (max-width: 768px) {
   .footer-content {
@@ -234,10 +401,11 @@ footer a {
 }
 
 footer .logo-footer {
-  font-family: "Shrikhand", cursive;
+  font-family: "Shrikhand";
   font-weight: normal;
   font-size: 20px;
   margin-bottom: 15px;
+  margin-right: 80px;
 }
 
 /*# sourceMappingURL=page3.css.map */
