--- a/sass/page4.scss
+++ b/sass/page4.scss
@@ -13,30 +13,36 @@ p {
     font-family: "roboto", sans-serif;
 }
 
-.head-mobile {
-    width: 100%;
-    @media (max-width: 768px) {
-        width: 110%;
-    }
-    
-}
-
-header  {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+header {
+    box-shadow: 0 0 0.5rem rgb(0 0 0 / 25%);
     width: 100%;
     min-width: 320px;
     padding: 21px 0;
 
-    img {
-        max-width: 168px;
-    }
+    .logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
 
-    i {
-        align-items: flex-start;
+        img {
+            max-width: 168px;
+        }
     }
+}
 
+.fa-arrow-left:before {
+    position: absolute;
+    left: 2rem;
+    height: 2rem;
+    width: 2rem;
+    top: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-50%);
+    font-size: 20px;
+    color: #000;
 }
 
 
@@ -52,6 +58,7 @@ main {
     }
 }
 
+
 .main-container {
         width: 70%;
         display: flex;
@@ -59,27 +66,51 @@ main {
         align-items: center;
         background-color: #F6F6F6;
         flex-direction: column;
-        border-radius: 3rem 3rem 0 0;
+        border-radius: 50px 50px 0 0;
         margin: -40px auto;
         position: relative;
         
        
         h1 {
-            font-family: 'Shrikhand', cursive;
-            font-size: 1.5rem;
+            font-family: 'Shrikhand';
+            font-size: 20px;
             align-items: flex-start;
         }
             
         
         i {
             display: flex;
-            font-size: 2rem;
-            padding-right: 3rem;
+            font-size: 30px;
+            padding-right: 50px;
         }
-    }
+
+        @media (max-width: 768px) {
+            width: 100%;
+        }
+
+        .menu {
+            width: 100%;
+            max-width: 634px;
+
+        h3 {
+            width: 95%;
+            max-width: 634px;
+        }
+
+        .card-menu {
+                width: 95%;
+                max-width: 634px;
+            }
+
+            }
+        }
+
+    
+    
         
     
 
+/******* Cartes des menus *******/ 
 
 .card-title {
     font-family: 'Shrikhand', cursive;
@@ -104,8 +135,98 @@ main {
     width: 634px;
     background: var(--white, #FFF);
     border-radius: 20px;
+
+
+    &card {
+        width: 350px;
+        padding: 14px 0;
+        border-radius: 15px;
+        display: flex;
+        justify-content: space-between;
+
+        h3 {
+            font-size: 16px;
+        }
+
+        h4 {
+            font-size: 16px;
+        }
+        @media (max-width: 768px) {
+            h3 {
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+
+            p {
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+        }
+
+        }
+
+
+    &:hover {
+        .btn-card {
+            margin-right: 0px;
+            min-width: 60px;
+            transition: margin-right 0.5s;    
+        }
+
+        .card-content {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+
+            h3 {
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+
+            p {
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+
+
+            }
+
+        .circle {
+            transform: rotate(360deg);
+        }
+
+        
+    }
 }
 
+.btn-card {
+    background-color: #99E2D0;
+    min-width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: -64px;
+}
+
+.circle {
+    width: 25px;
+    height: 25px;
+    border-radius: 100px;
+    background: #FFF;
+    display: flex;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    transition: transform 0.5s;
+    position: relative;
+
+    .fas {
+        color: #99E2D0;
+    }
+}
 
 .card-menu .card {
     padding: 10px;
@@ -114,36 +235,75 @@ main {
     flex: 1;
     display: flex;
     justify-content: space-between;
+    border-radius: 15.043px;
+    background: var(--white, #FFF);
+    box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.10);
 }
 
 .prix {
     display: flex;
     align-items: center;
+    align-self: flex-end;
 }
+
+
+/******* Entrées *******/
 
 .starter {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     align-items: center;
     margin-bottom: 40px;
+    gap: 12px;
 
     h3 {
-        align-self: flex-start;
         font-weight: 300;
+    }
+
+    h4 {
+        margin: 0;
+        padding-bottom: 5px;
+    }
+
+    p {
+        margin: 0;
+    }
+
+    .card {
+        padding: 15px;
+    }
+
+    @media (max-width: 768px) {
+        width: 100%;
     }
 }
 
+
+
+/******* Plats *******/
+
 .dish {
-     display: flex;
+    display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 12px;
     align-items: center;
     margin-bottom: 40px;
 
     h3 {
-        align-self: flex-start;
         font-weight: 300;
+    }
+
+    h4 {
+        margin: 0;
+        padding-bottom: 5px;
+    }
+
+    p {
+        margin: 0;
+    }
+
+    .card {
+        padding: 15px;
     }
 }
 
@@ -155,26 +315,44 @@ main {
     background: #99E2D0;
 }
 
+
+/******* Désserts ******/
+
 .dessert {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 12px;
     align-items: center;
     margin-bottom: 70px;
 
     h3 {
-        align-self: flex-start;
         font-weight: 300;
+    }
+
+    h4 {
+        margin: 0;
+        padding-bottom: 5px;
+    }
+
+    p {
+        margin: 0;
+    }
+
+    .card {
+        padding: 15px;
     }
 }
 
-.dessert h3::after {
+.dessert h3:after {
     content: "";
     display: block;
     width: 43px;
     height: 3px;
     background: #99E2D0;
-  }
+}
+
+
+/******* Bouton commander *******/
 
 .btn-explore {
     margin-top: 40px;
@@ -193,7 +371,7 @@ main {
     margin: 0 auto;
     background-image: linear-gradient(#FF79DA, #9356DC);
     transition: background-color 250ms;
-    box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
     }
 }
 
@@ -205,6 +383,8 @@ main {
 
 
 
+/******* Footer *******/
+
 footer {
     max-width: 1440px;
     width: 100%;
@@ -214,10 +394,11 @@ footer {
     display: flex;
     flex-direction: row-reverse;
     margin-top: 40px;
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    justify-content: flex-start;
 
     @media (max-width: 768px) {
-        width: 120%;
+        width: 100%;
         margin-right: 20px;
         height: 100%;
         flex-direction: column;
@@ -236,6 +417,25 @@ footer {
         text-decoration: none;
         color: white;
         }
+
+        i {
+            padding-right: 5px;
+            padding-left: 10px;
+
+            @media  (max-width: 768px) {
+                padding-left: 0;
+            }
+        }
+
+        .footer-text {
+            padding-right: 40px;
+            display: flex;
+            flex-direction: row-reverse;
+
+            @media (max-width: 768px) {
+                flex-direction: column;
+                }
+        }
 }
 
 .footer-content {
@@ -243,22 +443,23 @@ footer {
     flex-direction: row-reverse;
     gap: 10px;
     padding-right: 100px;
-    margin-top: 45px;
+    margin-top: 50px;
     padding: 10px 10px;
-    margin-right: 30px;
+    margin-right: 50px;
 
     @media (max-width: 768px) {
-        margin: 0;
-        padding: 10px 0 22px 22px;
-        flex-direction: column-reverse;
-        gap: 0;
+    margin: 0;
+    padding: 10px 0 22px 22px;
+    flex-direction: column-reverse;
+    gap: 0;
 
     }
 }
 
 footer .logo-footer {
-    font-family: "Shrikhand", cursive;
+    font-family: "Shrikhand" ;
     font-weight: normal;
     font-size: 20px;
     margin-bottom: 15px;
+    margin-right: 80px;
 }
