--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,13 +6,6 @@ body {
     max-width: 1440px;
 }
 
-.head-mobile {
-    width: 100%;
-    @media (max-width: 768px) {
-        width: 110%;
-    }
-    
-}
 
 main {
     width: 100%;
@@ -59,40 +52,61 @@ h1 {
     font-size: 40px;
 }
 
-.search {
-    background: var(--background, #F6F6F6);
 
-    padding-top: 30px;
 
-    p, .btn-explore{
-        text-align: center;
-    }
 
-    p {
-        font-size: 18px;
-    }
 
-    @media (max-width: 768px) {
-        width: 95%;
-    
-    }
-}
-
-.search-bar {
-    text-align: center;
-    background: var(--grey-2, #EAEAEA);
-    width: 100%;
-    height: 50px;
-
+.head-mobile {
     @media (max-width: 768px) {
         width: 100%;
-        padding-left: 50px;
     }
 
-    input {
-        margin: 15px;
+    .navbar {
+        @media (max-width: 768px) {
+            width: 100%;
+            margin: auto;
+        }
+    }
+
+    .search {
+        background: var(--background, #F6F6F6);
+    
+        padding-top: 30px;
+    
+        p, .btn-explore{
+            text-align: center;
+        }
+    
+        p {
+            font-size: 18px;
+        }
+    
+        @media (max-width: 768px) {
+            width: 95%;
+        
+        }
+    }
+
+    .search-bar {
+        text-align: center;
+        background: var(--grey-2, #EAEAEA);
+        width: 100%;
+        height: 50px;
+    
+        @media (max-width: 768px) {
+            width: 95%;
+            padding: 0;
+        }
+    
+        input {
+            margin: 15px;
+        }
     }
 }
+
+
+
+
 
 .navbar .btn-explore {
     display: flex;
@@ -108,13 +122,13 @@ h1 {
 }
 
 .navbar .btn-explore label {
-    padding: 1.3rem;
+    padding: 20px;
     color: white;
-    border-radius: 2rem;
-    font-size: 1.3rem;
+    border-radius: 30px;
+    font-size: 20px;
     background: linear-gradient(#ff79da, #9356dc);
-    margin-bottom: 3rem;
-    margin-top: 2rem;
+    margin-bottom: 50px;
+    margin-top: 30px;
     box-shadow: 0 3px 10px darkgray;
 }
 
@@ -125,16 +139,15 @@ h1 {
 }
 
 .navbar .btn-explore p {
-    font-size: 1.8rem;
+    font-size: 30px;
     margin: 0;
-    margin-top: 1.5rem;
-    padding: 0 1rem;
+    margin-top: 20px;
+    padding: 0 15px;
     flex-basis: 100%;
 }
 
 
 .filter {
-
     @media (max-width: 768px) {
         padding: 0;
     }
@@ -142,9 +155,7 @@ h1 {
 
     h2 {
         padding-left: 175px;
-
     }
-
 }
 
 
@@ -208,92 +219,144 @@ h1 {
     background-color: #F5EDFF;
     box-shadow: 0 3px 5px #ff79da;
 }
-  
 
-.restaurants {
-    margin-top: 30px;
-    padding-bottom: 70px;
-    background-color: #F6F6F6;
-
-    h2 {
-        padding-left: 175px;
-        padding-top: 30px;
-    }
-
-
-    @media (max-width: 768px) {
-        width: 90%;
-        padding-left: 25px;
-        padding-right: 30px;
-    }
-
-    @media (max-width: 768px) {
-        h2 {
-            padding-left: 0;
-        }
-    }
-}
-
-.restaurants-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 100px;
-    justify-content: center;
-
-@media (max-width: 768px) {
-    justify-content: center;
-    margin-bottom: 100px;
-}
-}
 
 
 
-.btn-new {
-    background-color: #99E2D0;
-    color: #1b6150;
-    padding: 0.5rem;
-    border-radius: 0.125rem;
-    position: relative;
-    top: 1rem;
-    right: 0.75rem;
-}
-  
-.card {
-    width: 498px;
-    height: 231px;
-}
-
-.card .card-content {
-    background-color: white;
-    width: 100%;
+.restaurants {
+    padding-bottom: 60px;
+    background-color: #EAEAEA;
     display: flex;
     flex-direction: column;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-top: 50px;
 
-    p {
-        margin: 0;
-        padding-bottom: 12px;
-        padding-left: 18px;
+    
+
+    a {
+        text-decoration: none;
+        color: black;
     }
 
-    h3 {
-        margin: 0;
-        margin-top: 12px;
-        padding-left: 18px;
+    .restaurants-title {
+        padding-top: 30px;
+        width: 100%;
     }
+
+    h2 {
+        padding-left: 50px;
+    }
+
+    .restaurants-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 50px;
+
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            padding: 5px;
+        }
+    }
+
+    .card {
+        cursor: pointer;
+        position: relative;
+        height: 270px;
+        display: flex;
+        flex-direction: column;
+        flex-basis: 45%;
+        background-color: white;
+        border-radius: 15px;
+        
+        img {
+            width: 100%;
+            object-fit: cover;
+            min-height: 200px;
+            max-height: 200px;
+            border-radius: 15px 15px 0 0;
+        }
+
+        .card-content {
+            display: flex;
+            justify-content: space-between;
+            padding-right: 15px;
+
+            .card-text {          
+                width: 85%;
+
+            h3, p {
+                margin: 0;
+                padding: 0.3rem 0 0 1rem;
+                }
+
+            .layout-star {
+                    width: 30px;
+            }    
+            }
+        
+        &:hover {
+        
+            transform: scale(1.01);
+            transition: 0.5s;
+            }
+        }
+
+    span {
+        position: absolute;
+        content: "";
+        right: 10px;
+        top: 20px;
+        font-weight: bold;
+        background-color: #92e2d0;
+        color: #008766;
+        padding: 10px;
+        width: 65px;
+        } 
+
+    h2 {
+        margin: 0 0 0 15px;
+        display: flex;
+        justify-content: center;
+        padding-top: 30px;
+        width: 100%;
+        }
+    }
+
 }
 
-.card img {
-    width: 100%;
-    object-fit: cover;
-    min-height: 200px;
-    max-height: 200px;
-    border-radius: 1rem 1rem 0 0;
+.heart-star {
+    display: flex;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+
+    .fa-solid.fa-heart { 
+        display: none;
+    }
+
+    &:hover {
+        cursor: pointer;                    
+        .fa-regular.fa-heart {
+            display: none;
+        }
+        .fa-solid.fa-heart {                   
+            display: inline;
+        }
+                                               
+        background: linear-gradient(#ff79da, #9356dc);
+        animation:  effet-opacity 1.5s ease;
+        background-clip: border-box;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        
+        }
 }
-
-
-
 
 
 
@@ -308,11 +371,12 @@ footer {
     color: white;  
     display: flex;
     flex-direction: row-reverse;
-    margin-top: 70px;
+    margin-top: 40px;
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+    justify-content: flex-start;
 
     @media (max-width: 768px) {
-        width: 120%;
+        width: 100%;
         margin-right: 20px;
         height: 100%;
         flex-direction: column;
@@ -331,6 +395,25 @@ footer {
         text-decoration: none;
         color: white;
         }
+
+        i {
+            padding-right: 5px;
+            padding-left: 10px;
+
+            @media  (max-width: 768px) {
+                padding-left: 0;
+            }
+        }
+
+        .footer-text {
+            padding-right: 40px;
+            display: flex;
+            flex-direction: row-reverse;
+
+            @media (max-width: 768px) {
+                flex-direction: column;
+                }
+        }
 }
 
 .footer-content {
@@ -338,26 +421,22 @@ footer {
     flex-direction: row-reverse;
     gap: 10px;
     padding-right: 100px;
-    margin-top: 45px;
+    margin-top: 50px;
     padding: 10px 10px;
-    margin-right: 30px;
+    margin-right: 50px;
 
     @media (max-width: 768px) {
-        margin: 0;
-        padding: 10px 0 22px 22px;
-        flex-direction: column-reverse;
-        gap: 0;
-
+    margin: 0;
+    padding: 10px 0 22px 22px;
+    flex-direction: column-reverse;
+    gap: 0;
     }
 }
 
 footer .logo-footer {
-    font-family: "Shrikhand", cursive;
+    font-family: "Shrikhand" ;
     font-weight: normal;
     font-size: 20px;
     margin-bottom: 15px;
+    margin-right: 80px;
 }
-
-
-
-
