--- a/style.css
+++ b/style.css
@@ -4,15 +4,6 @@ body {
   max-width: 1440px;
 }
 
-.head-mobile {
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .head-mobile {
-    width: 110%;
-  }
-}
-
 main {
   width: 100%;
 }
@@ -56,35 +47,45 @@ h1 {
   font-size: 40px;
 }
 
-.search {
+@media (max-width: 768px) {
+  .head-mobile {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .head-mobile .navbar {
+    width: 100%;
+    margin: auto;
+  }
+}
+.head-mobile .search {
   background: var(--background, #F6F6F6);
   padding-top: 30px;
 }
-.search p, .search .btn-explore {
+.head-mobile .search p, .head-mobile .search .btn-explore {
   text-align: center;
 }
-.search p {
+.head-mobile .search p {
   font-size: 18px;
 }
 @media (max-width: 768px) {
-  .search {
+  .head-mobile .search {
     width: 95%;
   }
 }
-
-.search-bar {
+.head-mobile .search-bar {
   text-align: center;
   background: var(--grey-2, #EAEAEA);
   width: 100%;
   height: 50px;
 }
 @media (max-width: 768px) {
-  .search-bar {
-    width: 100%;
-    padding-left: 50px;
+  .head-mobile .search-bar {
+    width: 95%;
+    padding: 0;
   }
 }
-.search-bar input {
+.head-mobile .search-bar input {
   margin: 15px;
 }
 
@@ -102,13 +103,13 @@ h1 {
 }
 
 .navbar .btn-explore label {
-  padding: 1.3rem;
+  padding: 20px;
   color: white;
-  border-radius: 2rem;
-  font-size: 1.3rem;
+  border-radius: 30px;
+  font-size: 20px;
   background: linear-gradient(#ff79da, #9356dc);
-  margin-bottom: 3rem;
-  margin-top: 2rem;
+  margin-bottom: 50px;
+  margin-top: 30px;
   box-shadow: 0 3px 10px darkgray;
 }
 
@@ -119,10 +120,10 @@ h1 {
 }
 
 .navbar .btn-explore p {
-  font-size: 1.8rem;
+  font-size: 30px;
   margin: 0;
-  margin-top: 1.5rem;
-  padding: 0 1rem;
+  margin-top: 20px;
+  padding: 0 15px;
   flex-basis: 100%;
 }
 
@@ -194,80 +195,118 @@ h1 {
 }
 
 .restaurants {
-  margin-top: 30px;
-  padding-bottom: 70px;
-  background-color: #F6F6F6;
-}
-.restaurants h2 {
-  padding-left: 175px;
-  padding-top: 30px;
-}
-@media (max-width: 768px) {
-  .restaurants {
-    width: 90%;
-    padding-left: 25px;
-    padding-right: 30px;
-  }
-}
-@media (max-width: 768px) {
-  .restaurants h2 {
-    padding-left: 0;
-  }
-}
-
-.restaurants-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 100px;
-  justify-content: center;
-}
-@media (max-width: 768px) {
-  .restaurants-container {
-    justify-content: center;
-    margin-bottom: 100px;
-  }
-}
-
-.btn-new {
-  background-color: #99E2D0;
-  color: #1b6150;
-  padding: 0.5rem;
-  border-radius: 0.125rem;
-  position: relative;
-  top: 1rem;
-  right: 0.75rem;
-}
-
-.card {
-  width: 498px;
-  height: 231px;
-}
-
-.card .card-content {
-  background-color: white;
-  width: 100%;
+  padding-bottom: 60px;
+  background-color: #EAEAEA;
   display: flex;
   flex-direction: column;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-top: 50px;
 }
-.card .card-content p {
-  margin: 0;
-  padding-bottom: 12px;
-  padding-left: 18px;
+.restaurants a {
+  text-decoration: none;
+  color: black;
 }
-.card .card-content h3 {
-  margin: 0;
-  margin-top: 12px;
-  padding-left: 18px;
+.restaurants .restaurants-title {
+  padding-top: 30px;
+  width: 100%;
 }
-
-.card img {
+.restaurants h2 {
+  padding-left: 50px;
+}
+.restaurants .restaurants-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
+}
+@media (max-width: 768px) {
+  .restaurants .restaurants-container {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+  }
+}
+.restaurants .card {
+  cursor: pointer;
+  position: relative;
+  height: 270px;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 45%;
+  background-color: white;
+  border-radius: 15px;
+}
+.restaurants .card img {
   width: 100%;
   object-fit: cover;
   min-height: 200px;
   max-height: 200px;
-  border-radius: 1rem 1rem 0 0;
+  border-radius: 15px 15px 0 0;
+}
+.restaurants .card .card-content {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 15px;
+}
+.restaurants .card .card-content .card-text {
+  width: 85%;
+}
+.restaurants .card .card-content .card-text h3, .restaurants .card .card-content .card-text p {
+  margin: 0;
+  padding: 0.3rem 0 0 1rem;
+}
+.restaurants .card .card-content .card-text .layout-star {
+  width: 30px;
+}
+.restaurants .card .card-content:hover {
+  transform: scale(1.01);
+  transition: 0.5s;
+}
+.restaurants .card span {
+  position: absolute;
+  content: "";
+  right: 10px;
+  top: 20px;
+  font-weight: bold;
+  background-color: #92e2d0;
+  color: #008766;
+  padding: 10px;
+  width: 65px;
+}
+.restaurants .card h2 {
+  margin: 0 0 0 15px;
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  width: 100%;
+}
+
+.heart-star {
+  display: flex;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+}
+.heart-star .fa-solid.fa-heart {
+  display: none;
+}
+.heart-star:hover {
+  cursor: pointer;
+  background: linear-gradient(#ff79da, #9356dc);
+  animation: effet-opacity 1.5s ease;
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.heart-star:hover .fa-regular.fa-heart {
+  display: none;
+}
+.heart-star:hover .fa-solid.fa-heart {
+  display: inline;
 }
 
 /*************** Footer *************/
@@ -279,12 +318,13 @@ footer {
   color: white;
   display: flex;
   flex-direction: row-reverse;
-  margin-top: 70px;
+  margin-top: 40px;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  justify-content: flex-start;
 }
 @media (max-width: 768px) {
   footer {
-    width: 120%;
+    width: 100%;
     margin-right: 20px;
     height: 100%;
     flex-direction: column;
@@ -302,15 +342,34 @@ footer a {
   text-decoration: none;
   color: white;
 }
+footer i {
+  padding-right: 5px;
+  padding-left: 10px;
+}
+@media (max-width: 768px) {
+  footer i {
+    padding-left: 0;
+  }
+}
+footer .footer-text {
+  padding-right: 40px;
+  display: flex;
+  flex-direction: row-reverse;
+}
+@media (max-width: 768px) {
+  footer .footer-text {
+    flex-direction: column;
+  }
+}
 
 .footer-content {
   display: flex;
   flex-direction: row-reverse;
   gap: 10px;
   padding-right: 100px;
-  margin-top: 45px;
+  margin-top: 50px;
   padding: 10px 10px;
-  margin-right: 30px;
+  margin-right: 50px;
 }
 @media (max-width: 768px) {
   .footer-content {
@@ -322,10 +381,11 @@ footer a {
 }
 
 footer .logo-footer {
-  font-family: "Shrikhand", cursive;
+  font-family: "Shrikhand";
   font-weight: normal;
   font-size: 20px;
   margin-bottom: 15px;
+  margin-right: 80px;
 }
 
 /*# sourceMappingURL=style.css.map */
